Remove robolectric plugin since it is not needed anymore
This CL also replaces Cobertura with Jacoco and removes ant build